tdf#159895 sw: fix "Stack empty" error in tagged PDF export

Change-Id: I8a2e0d51d1cfe6d4b517f193c73e512600638cf0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172302
Tested-by: Jenkins
Reviewed-by: Nagy Tibor <tibor.nagy.extern@allotropia.de>